--- a/NmyBlog.Web/Views/Home/Index.cshtml
+++ b/NmyBlog.Web/Views/Home/Index.cshtml
@@ -58,15 +58,16 @@
                     </h1>
                 </div>
                 <div class="collapse navbar-collapse" id="header-navbar">
-                    <form class="navbar-form visible-xs" action="/Search" method="post">
+
+                    <div class="navbar-form visible-xs">
                         <div class="input-group">
-                            <input type="text" name="keyword" class="form-control" placeholder="请输入关键字" maxlength="20"
-                                   autocomplete="off">
+                            <input type="text" name="keyword" id="search_key2" class="form-control" placeholder="请输入关键字" maxlength="20" autocomplete="off">
                             <span class="input-group-btn">
-                                <button class="btn btn-default btn-search" name="search" type="submit">搜索</button>
+                                <button class="btn btn-default btn-search" name="search" onclick="search2()">搜索</button>
                             </span>
                         </div>
-                    </form>
+                    </div>
+
                     <ul class="nav navbar-nav navbar-right">
                         <li><a data-cont="纳米源" title="纳米源" href="/Home">首页</a></li>
                         <li><a data-cont="我的文章" title="我的文章" href="/List">我的文章</a></li>
@@ -205,16 +206,23 @@
                 </div>
 
                 <div class="widget widget_search">
-                    <form class="navbar-form" action="/Search" method="post">
+
+                    <div class="navbar-form">
                         <div class="input-group">
-                            <input type="text" name="keyword" class="form-control" size="35" placeholder="请输入关键字" maxlength="15"
-                                   autocomplete="off">
+                            <input type="text" name="keyword" id="search_key" class="form-control" size="35" placeholder="请输入关键字" maxlength="15" autocomplete="off">
                             <span class="input-group-btn">
-                                <button class="btn btn-default btn-search" name="search" type="submit">搜索</button>
+                                <button class="btn btn-default btn-search" name="search" onclick="search()">搜索</button>
                             </span>
                         </div>
-                    </form>
+                    </div>
+
                 </div>
+                
+                @*<div class="layui-form-item">
+                            <input type="text" name="key" id="search_key" required lay-verify="required" placeholder="查询关键字" autocomplete="off" class="layui-input" style="width:60%;float: left;">
+                            <button class="layui-btn" onclick="search()"><i class="layui-icon">&#xe615;</i>查询</button>
+                        </div>*@
+
             </div>
 
             <div class="widget widget_hot">
@@ -259,6 +267,23 @@
     <script src="~/main/js/bootstrap.min.js"></script>
     <script src="~/main/js/jquery.ias.js"></script>
     <script src="~/main/js/scripts.js"></script>
+
+    <script>
+        /*查询*/
+        function search() {
+            var key = $('#search_key').val();
+            var url = "/List/Index?key=" + key;
+            location.href = url;
+        }
+
+        /*移动版 查询*/
+        function search2() {
+            var key = $('#search_key2').val();
+            var url = "/List/Index?key=" + key;
+            location.href = url;
+        }
+    </script>
+
 </body>
 
 </html>
