--- a/NmyBlog.Web/Views/List/Index.cshtml
+++ b/NmyBlog.Web/Views/List/Index.cshtml
@@ -59,15 +59,17 @@
                     </h1>
                 </div>
                 <div class="collapse navbar-collapse" id="header-navbar">
-                    <form class="navbar-form visible-xs" action="/Search" method="post">
+
+                    <div class="navbar-form visible-xs">
                         <div class="input-group">
-                            <input type="text" name="keyword" class="form-control" placeholder="请输入关键字" maxlength="20"
+                            <input type="text" name="keyword" id="search_key2" class="form-control" placeholder="请输入关键字" maxlength="20"
                                    autocomplete="off">
                             <span class="input-group-btn">
-                                <button class="btn btn-default btn-search" name="search" type="submit">搜索</button>
+                                <button class="btn btn-default btn-search" name="search" onclick="search2()">搜索</button>
                             </span>
                         </div>
-                    </form>
+                    </div>
+
                     <ul class="nav navbar-nav navbar-right">
                         <li><a data-cont="纳米源" title="纳米源" href="/Home">首页</a></li>
                         <li><a data-cont="我的文章" title="我的文章" href="/List">我的文章</a></li>
@@ -82,68 +84,66 @@
     <section class="container">
         <div class="content-wrap">
             <div class="content">
-                <div id="focusslide" class="carousel slide" data-ride="carousel">
-                    <div class="title">
-                        <h3>最新发布</h3>
-                        <div class="more">
-                            @foreach (NmyBlog.Model.Category ca in ViewBag.calist)
-                            {
-                                <a href="#" title="@ca.CaName">@ca.CaName</a>
-                            }
-                        </div>
+                <div class="title">
+                    <h3>最新发布</h3>
+                    <div class="more">
+                        @foreach (NmyBlog.Model.Category ca in ViewBag.calist)
+                        {
+                            <a href="#" title="@ca.CaName">@ca.CaName</a>
+                        }
                     </div>
-
-
-                    @foreach (var blog in Model)
-                    {
-                        <!-- 1 -->
-                        <article class="excerpt excerpt-1">
-                            <a class="focus" href="/Page?id=@blog.Id" title="@blog.Title" target="_blank">
-                                <img class="thumb"
-                                     data-original="~/main/images/nmy_main.jpg" src="~/main/images/nmy_main.jpg"
-                                     alt="@blog.Title" style="display: inline;">
-                            </a>
-                            <header>
-                                <a class="cat" href="#" title="@blog.CaName">@blog.CaName 主题<i></i></a>
-                                <h2>
-                                    <a href="/Page?id=@blog.Id" title="@blog.Title" target="_blank">@blog.Title</a>
-                                </h2>
-                            </header>
-                            <p class="meta">
-                                <time class="time"><i class="glyphicon glyphicon-time"></i> @blog.CreateDate</time>
-                                <span class="views"><i class="glyphicon glyphicon-eye-open"></i> @blog.VisitNum</span>
-                            </p>
-                            <p class="note">
-                                @if (blog.Body.Length > 250)
-                                {
-                                    @blog.Body.Substring(0, 250)
-                                }
-                                else
-                                {
-                                    @blog.Body
-                                }
-                            </p>
-                        </article>
-                    }
-
-
-
                 </div>
+
+
+                @foreach (var blog in Model)
+                {
+                    <!-- 1 -->
+                    <article class="excerpt excerpt-1">
+                        <a class="focus" href="/Page?id=@blog.Id" title="@blog.Title" target="_blank">
+                            <img class="thumb"
+                                 data-original="~/main/images/nmy_main.jpg" src="~/main/images/nmy_main.jpg"
+                                 alt="@blog.Title" style="display: inline;">
+                        </a>
+                        <header>
+                            <a class="cat" href="#" title="@blog.CaName">@blog.CaName 主题<i></i></a>
+                            <h2>
+                                <a href="/Page?id=@blog.Id" title="@blog.Title" target="_blank">@blog.Title</a>
+                            </h2>
+                        </header>
+                        <p class="meta">
+                            <time class="time"><i class="glyphicon glyphicon-time"></i> @blog.CreateDate</time>
+                            <span class="views"><i class="glyphicon glyphicon-eye-open"></i> @blog.VisitNum</span>
+                        </p>
+                        <p class="note">
+                            @if (blog.Body.Length > 250)
+                            {
+                                @blog.Body.Substring(0, 250)
+                            }
+                            else
+                            {
+                                @blog.Body
+                            }
+                        </p>
+                    </article>
+                }
+
+
             </div>
         </div>
 
         <aside class="sidebar">
             <div class="fixed">
                 <div class="widget widget_search">
-                    <form class="navbar-form" action="/Search" method="post">
+
+                    <div class="navbar-form">
                         <div class="input-group">
-                            <input type="text" name="keyword" class="form-control" size="35" placeholder="请输入关键字" maxlength="15"
-                                   autocomplete="off">
+                            <input type="text" name="keyword" id="search_key" class="form-control" size="35" placeholder="请输入关键字" maxlength="15" autocomplete="off">
                             <span class="input-group-btn">
-                                <button class="btn btn-default btn-search" name="search" type="submit">搜索</button>
+                                <button class="btn btn-default btn-search" name="search" onclick="search()">搜索</button>
                             </span>
                         </div>
-                    </form>
+                    </div>
+
                 </div>
             </div>
 
@@ -186,6 +186,22 @@
     <script src="~/main/js/bootstrap.min.js"></script>
     <script src="~/main/js/jquery.ias.js"></script>
     <script src="~/main/js/scripts.js"></script>
+
+    <script>
+        /*查询*/
+        function search() {
+            var key = $('#search_key').val();
+            var url = "/List/Index?key=" + key;
+            location.href = url;
+        }
+
+        /*移动端 查询*/
+        function search2() {
+            var key = $('#search_key2').val();
+            var url = "/List/Index?key=" + key;
+            location.href = url;
+        }
+    </script>
 </body>
 
 </html>
